test/files/neg/t4749.check
t4749.scala:5: warning: not a valid main method for bippy.Fail1,
  because main methods must have the exact signature (Array[String])Unit.
  To define an entry point, please define the main method as:
    def main(args: Array[String]): Unit

    def main(args: Array[String]): Any = ()
        ^
t4749.scala:9: warning: not a valid main method for bippy.Fail2,
  because main methods cannot be generic.
  To define an entry point, please define the main method as:
    def main(args: Array[String]): Unit

    def main[T](args: Array[String]): T = null.asInstanceOf[T]
        ^
t4749.scala:13: warning: not a valid main method for bippy.Fail3,
  because main methods cannot refer to type parameters or abstract types.
  To define an entry point, please define the main method as:
    def main(args: Array[String]): Unit

    def main(args: Array[String]): T = null.asInstanceOf[T]
        ^
t4749.scala:18: warning: Fail4 has a valid main method (args: Array[String])Unit,
  but bippy.Fail4 will not have an entry point on the JVM.
  Reason: companion is a trait, which means no static forwarder can be generated.

  object Fail4 {
         ^
t4749.scala:23: warning: Fail5 has a valid main method (args: Array[String])Unit,
  but bippy.Fail5 will not have an entry point on the JVM.
  Reason: companion contains its own main method, which means no static forwarder can be generated.

  object Fail5 extends Fail5 { }
         ^
t4749.scala:28: warning: Fail6 has a valid main method (args: Array[String])Unit,
  but bippy.Fail6 will not have an entry point on the JVM.
  Reason: companion contains its own main method (implementation restriction: no main is allowed, regardless of signature), which means no static forwarder can be generated.

  object Fail6 {
         ^
t4749.scala:44: warning: not a valid main method for bippy.Win3,
  because main methods must have the exact signature (Array[String])Unit.
  To define an entry point, please define the main method as:
    def main(args: Array[String]): Unit

  object Win3 extends WinBippy[Unit] { }
         ^
error: No warnings can be incurred under -Xfatal-warnings.
7 warnings found
one error found
